--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,105 @@
 }
 
 .buttons {
-  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin: 10px;
+
+}
+
+#B1 {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  margin: 10px;
-  padding: 10px;
+  border: 1px solid black;
   border-radius: 100%;
   height: 30px;
   width: 30px;
-
 }
+
+#B2 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B3 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B4 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B5 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B6 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B7 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B8 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B9 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
+#B10 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+
 .title {
   /* display: flex;
   justify-content: center; */
@@ -23,4 +111,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 30px;
+}
+
+h1 {
+  padding-bottom: 20px;
 }
