--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,92 @@
   padding: 0;
   box-sizing: border-box;
 }
+.buttons{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:10px;
+  padding: 10px;
 
-.buttons {
-  border: 1px solid black;
+
+}
+#B1 {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  margin: 10px;
-  padding: 10px;
+  background-color:red;
+  border:1px solid black;
   border-radius: 100%;
   height: 30px;
   width: 30px;
 
 }
+#B2 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B3{
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B4 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B5 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B6 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B7 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B8 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+#B9 {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+
+}
+
 .title {
   /* display: flex;
   justify-content: center; */
