--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,12 @@
   box-sizing: border-box;
 }
 body{
-  background-color: black;
+  background-color: white;
 }
 .title{
   font-family: "monospace",monospace;
 
-  color:white;
+  color:black;
 }
 
 .buttons {
